[gd_scene load_steps=10 format=2]

[ext_resource path="res://SRC/Coin.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/coin/gold_3.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/coin/gold_2.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/coin/gold_1.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/sounds/powerUp2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 42.0476

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "bounce"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -180 ), Vector2( 0, -66 ) ]
}

[node name="Coin" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "spin"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/bounce = SubResource( 4 )

[node name="SoundCoinCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
